# elfsizer

./: .gitignore  .gitmodules  CMakeCppArgparse.cmake  CMakeLists.txt  README.md  main.rawmap
src/: CMakeLists.txt  ElfSizer.cpp  ElfSizer.h  ElfSizerBuilder.cpp  ElfSizerBuilder.h  Utility.cpp  Utility.h  main.cpp
test/: CMakeLists.txt  ElfSizerBuilderTest.cpp  ElfSizerTest.cpp  UtilityTest.cpp  Welcome.elf
